updated to latest tensorflow

--- a/sshd/Dockerfile
+++ b/sshd/Dockerfile
@@ -1,6 +1,8 @@
-FROM uberthought/tensorflowcpu:latest
+FROM tensorflow/tensorflow:latest-py3
 
 # setup SSHD
+RUN apt-get update
+RUN apt-get upgrade -y
 RUN apt-get install -y openssh-server
 
 RUN mkdir /var/run/sshd
@@ -12,6 +14,10 @@ RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so
 
 ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
+
+RUN echo "export LC_ALL=C" >> /root/.bashrc
+
+RUN apt-get install -y git python3-tk
 
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
