--- a/Dockerfile.nvidia
+++ b/Dockerfile.nvidia
@@ -14,7 +14,7 @@ RUN pip3 install --upgrade pip
 
 # install tensorflow
 
-RUN pip3 install tensorflow
+RUN pip3 install tensorflow-gpu
 
 # setup sshd
 
