--- a/Dockerfile.nvidia
+++ b/Dockerfile.nvidia
@@ -43,7 +43,7 @@ RUN apt-get install -y ffmpeg
 
 # av
 
-RUN apt-get install pkg-config \
+RUN apt-get install -y pkg-config \
   libavformat-dev libavcodec-dev libavdevice-dev \
   libavutil-dev libswscale-dev libavresample-dev
 RUN pip3 install av
