--- a/Dockerfile.nvidia
+++ b/Dockerfile.nvidia
@@ -1,4 +1,5 @@
-FROM nvidia/cuda:latest
+# FROM nvidia/cuda:latest
+FROM gcr.io/tensorflow/tensorflow:latest-gpu-py3
 
 # basic setup
 
@@ -9,12 +10,12 @@ RUN apt-get install -y git vim
 
 # install python3
 
-RUN apt-get install -y python3-pip python3-dev python3-tk
-RUN pip3 install --upgrade pip
+# RUN apt-get install -y python3-pip python3-dev python3-tk
+# RUN pip3 install --upgrade pip
 
 # install tensorflow
 
-RUN pip3 install tensorflow-gpu
+# RUN pip3 install tensorflow-gpu
 
 # setup sshd
 
