--- a/Dockerfile.nvidia
+++ b/Dockerfile.nvidia
@@ -3,19 +3,9 @@ FROM gcr.io/tensorflow/tensorflow:latest-gpu-py3
 
 # basic setup
 
-RUN apt-get update --fix-missing
-RUN apt-get upgrade -y
+RUN apt-get update
 
 RUN apt-get install -y git vim
-
-# install python3
-
-# RUN apt-get install -y python3-pip python3-dev python3-tk
-# RUN pip3 install --upgrade pip
-
-# install tensorflow
-
-# RUN pip3 install tensorflow-gpu
 
 # setup sshd
 
@@ -41,10 +31,3 @@ RUN apt-get install -y python3-matplotlib
 # ffmpeg
 
 RUN apt-get install -y ffmpeg
-
-# av
-
-RUN apt-get install -y pkg-config \
-  libavformat-dev libavcodec-dev libavdevice-dev \
-  libavutil-dev libswscale-dev libavresample-dev
-RUN pip3 install av
