--- a/Dockerfile.nvidia
+++ b/Dockerfile.nvidia
@@ -1,32 +1,40 @@
-FROM gcr.io/tensorflow/tensorflow:latest-gpu-py3
+FROM ubuntu:latest
 
 # basic setup
-
 RUN apt-get update
-
+RUN apt-get upgrade -y
 RUN apt-get install -y git vim
 
 # setup sshd
-
 RUN apt-get install -y openssh-server
 RUN mkdir /var/run/sshd
 RUN useradd --create-home --shell /bin/bash tf
 RUN echo "export LC_ALL=C" >> /home/tf/.bashrc
+RUN echo "X11UseLocalhost no" >> /etc/ssh/sshd_config
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
 
-# setup Pillow
+# python3
+RUN apt-get install -y \
+  python3 \
+  python3-pip
+RUN pip3 install --upgrade pip
 
+# tensorflow
+RUN pip3 install tensorflow-gpu
+
+# Pillow
 RUN apt-get install -y imagemagick
-
 RUN pip3 install \
   numpy \
   pillow
 
-# setup matplotlib
-
+# matplotlib
 RUN apt-get install -y python3-matplotlib
 
 # ffmpeg
-
 RUN apt-get install -y ffmpeg
+
+# flask
+RUN pip3 install Flask
+EXPOSE 5000
